--- a/wiki/ComparisonTest.wiki
+++ b/wiki/ComparisonTest.wiki
@@ -10,6 +10,9 @@
   * BC：单字和后项组合(single_combine, combine_backward=1)
   * NC：单字和相邻单字组合(single_combine, combine_neighbor=1)
 
+== 注意 ==
+
+所有模型，默认都带有数字后缀修正。即“1800 万”会被合并为“1800万”
 
 == 北京大学语料 ==
 
