--- a/wiki/InstallPHPExtension.wiki
+++ b/wiki/InstallPHPExtension.wiki
@@ -1,5 +1,7 @@
 #summary PHP扩展的安装
 
+=安装=
+
 *请确认系统已经安装php开发包*
 
 {{{
@@ -16,3 +18,10 @@ bamboo.configuration=/opt/bamboo/etc/bamboo.cfg
 }}}
 
 *注意*: _如果bamboo.configuration为空，那么系统会按照默认路径寻找bamboo.cfg_
+
+=测试=
+
+{{{
+cd /opt/bamboo/exts/php
+php sample.php
+}}}
