Edited wiki page through web user interface.

--- a/wiki/InstallPHPExtension.wiki
+++ b/wiki/InstallPHPExtension.wiki
@@ -25,3 +25,7 @@ bamboo.configuration=/opt/bamboo/etc/bamboo.cfg
 cd /opt/bamboo/exts/php
 php sample.php
 }}}
+
+=PHP API=
+
+请参考[ApplicationInterface]里的PHP部分
