Edited wiki page through web user interface.

--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -8,6 +8,7 @@
     * CRF2有专有的训练脚本了，您再也不用劳神去研究如果Build一个CRF2的模型了
     * 我们努力让配置文件更加具有可读性和灵活性，虽然还有很多工作需要继续完成。
     * 很多让人头疼的Bug被修正了。 
+    * 改变了PHP，PostgreSQL的扩展程序结构，现在他们可以运行得更快了。
 
 2008-10-08
   * 项目从CNLexizer更名为Bamboo
