Edited wiki page through web user interface.

--- a/wiki/Benchmark.wiki
+++ b/wiki/Benchmark.wiki
@@ -1,6 +1,12 @@
 ﻿#summary 分词测试结果
 #labels Featured
 
+= 互联网测试 =
+
+  * 对1000句BBS中的句子进行人工测试，分词准确度: 96.1%
+  * 对2000句菜谱类的句子进行人工测试，分词准确度：93.7%
+
+
 = 人民日报98年一月语料库 =
 
 == CRF 2 Columns ==
