--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,11 +1,11 @@
-=Bamboo项目介绍=
+==Bamboo项目介绍==
   # Bamboo项目是一个基于机器学习技术的中文自然语言处理平台。
   # Bamboo项目的主要目标：
     * 中文分词
     * 词性标注
     * 命名实体识别
     * 主题词抽取
-=Bamboo安装部署=
+==Bamboo安装部署==
   # 从google code的subversion下载bamboo源代码。
     * 请参考http://code.google.com/p/nlpbamboo/source/checkout
   # 安装CRF++工具包
@@ -46,12 +46,12 @@ make install
    * /opt/bamboo/exts/ : 扩展接口
    * /usr/lib/ : 动态链接库
    * /usr/include/bamboo/ : C/C++的头文件
-=Bamboo配置选项=
+==Bamboo配置选项==
   # Bamboo安装完成后，其默认的配置文件都在/opt/bamboo/etc/目录下，每个Bamboo Parser都有自己的配置文件
   # Bamboo配置文件中的参数含义可参见配置文件内部的参数注释，默认的配置参数可支持基本的应用场景，建议初次使用者保留参数不变;对于对程序内部流程相对了解的高级用户，可以根据需要对参数进行调整
   # 在php.ini配置文件中添加行：bamboo.parsers=crf_seg,crf_pos,…
 
-=Bamboo训练学习=
+==Bamboo训练学习==
   # Bamboo中的分词，词性标注和命名实体识别算法都是基于由字构词的文本标注思想，因此在使用Bamboo之前需要准备好已完成标注的的文本语料，然后使用CRF
 ++工具包和相应的特征模板进行训练，最终得出各自的字典，统计信息和模型文件
   # Bamboo中的主题词抽取是在TF和IDF的基础上，用词句关系图分析的算法计算所有分词的权重，最终给出Top权重词，因此在使用Bamboo的主题词抽取前也需要>
@@ -69,10 +69,10 @@ make install
     * data目录中存放了文本格式的语料和字典文件
     * index目录中存放了二进制格式的训练model和字典trie树文件
 
-=Bamboo命令行入口=
-  # Bamboo命令行：
+==Bamboo测试==
+  # Bamboo命令行接口：
 {{{
-/opt/bamboo/bin/bamboo -p bamboo_parser -c bamboo_cfg
+/opt/bamboo/bin/bamboo -p [bamboo_parser] -c [bamboo_cfg]
 }}}
   # -p 选项的取值可以是crf_seg, crf_pos, crf_ner_nr, crf_ner_ns, crf_ner_nt, keyword，分别对应相应的BambooParser
   # -c 选项可以指定配置文件的路径，缺省会用/opt/bamboo/etc/目录下默认的配置文件
