--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,4 +1,4 @@
-#summary 下载，安装，运行第一个Bamboo程序
+#summary Getting Started with Bamboo Framework
 ==Bamboo项目介绍==
   # Bamboo项目是一个基于机器学习技术的中文自然语言处理平台。
   # Bamboo项目的主要目标：
