--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -47,10 +47,12 @@ make install
    * /opt/bamboo/exts/ : 扩展接口
    * /usr/lib/ : 动态链接库
    * /usr/include/bamboo/ : C/C++的头文件
-==Bamboo配置选项==
+==Bamboo配置==
   # Bamboo安装完成后，其默认的配置文件都在/opt/bamboo/etc/目录下，每个Bamboo Parser都有自己的配置文件
   # Bamboo配置文件中的参数含义可参见配置文件内部的参数注释，默认的配置参数可支持基本的应用场景，建议初次使用者保留参数不变;对于对程序内部流程相对了解的高级用户，可以根据需要对参数进行调整
-  # 在php.ini配置文件中添加行：bamboo.parsers=crf_seg,crf_pos,…
+  # 在php.ini配置文件中添加如下2行：
+    * extension = bamboo.so
+    * bamboo.parsers = crf_seg,crf_pos，crf_ner_ns, keyword 
 
 ==Bamboo训练学习==
   # Bamboo中的分词，词性标注和命名实体识别算法都是基于由字构词的文本标注思想，因此在使用Bamboo之前需要准备好已完成标注的的文本语料，然后使用CRF
