--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -55,10 +55,8 @@ make install
     * bamboo.parsers = crf_seg,crf_pos，crf_ner_ns, keyword 
 
 ==Bamboo训练学习==
-  # Bamboo中的分词，词性标注和命名实体识别算法都是基于由字构词的文本标注思想，因此在使用Bamboo之前需要准备好已完成标注的的文本语料，然后使用CRF
-++工具包和相应的特征模板进行训练，最终得出各自的字典，统计信息和模型文件
-  # Bamboo中的主题词抽取是在TF和IDF的基础上，用词句关系图分析的算法计算所有分词的权重，最终给出Top权重词，因此在使用Bamboo的主题词抽取前也需要>
-收集一定规模的文本语料，对其中的分词进行统计和训练，得出各种词的IDF和同现关系，以供抽取时计算使用。
+  # Bamboo中的分词，词性标注和命名实体识别算法都是基于由字构词的文本标注思想，因此在使用Bamboo之前需要准备好已完成标注的的文本语料，然后使用CRF++工具包和相应的特征模板进行训练，最终得出各自的字典，统计信息和模型文件
+  # Bamboo中的主题词抽取是在TF和IDF的基础上，用词句关系图分析的算法计算所有分词的权重，最终给出Top权重词，因此在使用Bamboo的主题词抽取前也需要收集一定规模的文本语料，对其中的分词进行统计和训练，得出各种词的IDF和同现关系，以供抽取时计算使用。
   # Bamboo训练方法：
 {{{
 /opt/bamboo/bin/autobuild -t [train_type] -f [train_file.txt] -d [train_dir] -p [thread_number]
@@ -77,6 +75,6 @@ make install
 {{{
 /opt/bamboo/bin/bamboo -p [bamboo_parser] -c [bamboo_cfg]
 }}}
-  # -p 选项的取值可以是crf_seg, crf_pos, crf_ner_nr, crf_ner_ns, crf_ner_nt, keyword，分别对应相应的BambooParser
+  # -p 选项的取值可以是crf_seg, crf_pos, crf_ner_nr, crf_ner_ns, crf_ner_nt, keyword，分别对应相应的Bamboo Parser
   # -c 选项可以指定配置文件的路径，缺省会用/opt/bamboo/etc/目录下默认的配置文件
   # Bamboo命令从标准输入接收文本，并根据不同的Parser选项输出相应的结果，例如：分词，词性，地名，主题词等
