--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -54,7 +54,7 @@ make install
     * extension = bamboo.so
     * bamboo.parsers = crf_seg,crf_pos，crf_ner_ns, keyword 
 
-==Bamboo训练学习==
+==Bamboo训练统计==
   # Bamboo中的分词，词性标注和命名实体识别算法都是基于由字构词的文本标注思想，因此在使用Bamboo之前需要准备好已完成标注的的文本语料，然后使用CRF++工具包和相应的特征模板进行训练，最终得出各自的字典，统计信息和模型文件
   # Bamboo中的主题词抽取是在TF和IDF的基础上，用词句关系图分析的算法计算所有分词的权重，最终给出Top权重词，因此在使用Bamboo的主题词抽取前也需要收集一定规模的文本语料，对其中的分词进行统计和训练，得出各种词的IDF和同现关系，以供抽取时计算使用。
   # Bamboo训练方法：
