--- a/wiki/Revise.wiki
+++ b/wiki/Revise.wiki
@@ -1,9 +1,7 @@
 #summary How to revise Segmentation In Bamboo
-==Bamboo分词流程==
- # 预处理
- # CRF，Unigram，Maxforward分词
- # 修正分词
-==修正分词的方法==
+==Bamboo为什么要修正分词==
+ # Bamboo的分词可以选择多种分词算法，CRF，Unigram等，不过任何一种分词都不能保证完全正确，因此需要在主分词模块完成后，进行后续修正。
+==Bamboo修正分词的方法==
  # 将未分词的单字整合，user_combine
  # 将较长的分词结果打散，break
 ==Build user_combine辞典==
@@ -31,12 +29,11 @@ lexicon -b -i break.idx -s break.txt
 41 中华人民共和国
 ...
 }}}
+  * 第一列的十进制数字是break标志位
 {{{
 中 华 人 民 共 和 国
 0  1  0  1  0  0  1
 dec(41) = bin(0101001)
 }}}
-  * 第一列的十进制数字是break标志位
   * 第二列是需要break的词 
-
- * 最后需要将break.idx拷贝到/opt/bamboo/index/目录下
+  * 最后需要将break.idx拷贝到/opt/bamboo/index/目录下
