Edited wiki page through web user interface.

--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -1,4 +1,5 @@
 #summary Getting Started with Bamboo Framework
+#labels Featured
 ==Bamboo项目介绍==
   # Bamboo项目是一个基于机器学习技术的中文自然语言处理平台。
   # Bamboo项目的主要目标：
