--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -82,14 +82,14 @@ sudo make install
   # Bamboo中的主题词抽取是在TF和IDF的基础上，用词句关系图分析的算法计算所有分词的权重，最终给出Top权重词，因此在使用Bamboo的主题词抽取前也需要收集一定规模的文本语料，对其中的分词进行统计和训练，得出各种词的IDF和同现关系，以供抽取时计算使用。
   # Bamboo训练方法：
 {{{
-/opt/bamboo/bin/autobuild -t [train_type] -f [train_file.txt] -d [train_dir] -p [thread_number]
+/opt/bamboo/bin/auto_build -t [train_type] -f [train_file.txt] -d [train_dir] -p [thread_number]
 }}}
-  # autobuild的训练参数：
+  # auto_build的训练参数：
     * -t 选项指定了训练的类型，即是分词、词性、实体词还是主题词的训练
     * -f 选项指定了训练语料的路径，缺省会自动下载98年人民日报1月份的文章作为语料
     * -d 选项指定了训练语料的目录，该目录下的.txt文本文件会被当做主题词抽取的语料
     * -p 选项指定了CRF++训练的线程数量，推荐和cpu数量一致
-  # autobuild的配置文件是/opt/bamboo/etc/build_settings，默认训练完成后，会在/opt/bamboo/下产生2个新目录：data/和index/
+  # auto_build的配置文件是/opt/bamboo/etc/build_settings，默认训练完成后，会在/opt/bamboo/下产生2个新目录：data/和index/
     * data目录中存放了文本格式的语料和字典文件
     * index目录中存放了二进制格式的训练model和字典trie树文件
   # 除了缺省字典，Bamboo还为用户提供了自定义字典的工具lexicon，其具体方法请参考[http://code.google.com/p/nlpbamboo/wiki/Tools Bamboo Tools]，用户可以使用lexicon定制自己的user_combine和break辞典，其功能如下所示：
