Edited wiki page through web user interface.

--- a/wiki/TSearch2.wiki
+++ b/wiki/TSearch2.wiki
@@ -5,7 +5,7 @@
 
 PostgreSQL分词函数需要安装好Bamboo的系统(不需要Bamboo源代码)和预先安装好的postgresql，编译环境需要能找到 pg_config 命令。
 如果您的系统中没有安装Bamboo，请参考：
-  * 从源代码安装Bamboo：HowToBuild
+  * 从源代码安装Bamboo：GettingStarted    
   * Bamboo 二进制包安装方法：BinaryInstall
 
 == 编译和安装 ==
@@ -38,7 +38,7 @@ postgres=# select tokenize('中文分词');
 
 = Tsearch2 分词模块 =
 
-Tsearch2分词模块需要安装好Bamboo的系统以及Bamboo源代码。安装Bamboo请参考HowToBuild
+Tsearch2分词模块需要安装好Bamboo的系统以及Bamboo源代码。安装Bamboo请参考GettingStarted    
 
 == 编译和安装 ==
 
