Edited wiki page Benchmark through web user interface.

--- a/wiki/Benchmark.wiki
+++ b/wiki/Benchmark.wiki
@@ -4,7 +4,7 @@
 = 互联网测试 =
 
   * 对1000句 _BBS_ 中的句子进行人工测试，分词准确度: *96.1%*
-  * 对2000句 _菜谱_ 中的句子进行人工测试，分词准确度：*93.7%*
+  * 对2000句 _菜谱_ 中的句子进行人工测试，分词准确度: *93.7%*
 
 
 = 人民日报98年一月语料库 =
