--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -8,7 +8,7 @@
     * 命名实体识别
     * 主题词抽取
 ==Bamboo安装部署==
-===方法一: 用预打包的tar包安装===
+===方法一: 安装最新的稳定版===
   # 下载源代码
      * http://nlpbamboo.googlecode.com/files/nlpbamboo-1.1.2.tar.bz2
   # 安装CRF++工具包
