--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -8,7 +8,7 @@
     * 命名实体识别
     * 主题词抽取
 ==Bamboo安装部署==
-===方法一: 安装最新的稳定版===
+===方法一: 安装打过包的最新稳定版===
   # 下载源代码
      * http://nlpbamboo.googlecode.com/files/nlpbamboo-1.1.2.tar.bz2
   # 安装CRF++工具包
@@ -50,10 +50,10 @@ make install
    * /opt/bamboo/exts/ : 扩展接口
    * /usr/lib/ : 动态链接库
    * /usr/include/bamboo/ : C/C++的头文件
-===方法二：直接在svn代码树上编译安装===
+===方法二：安装测试svn trunk的最新源码===
 
-  # 从google code的subversion下载bamboo源代码。
-    * 请参考http://code.google.com/p/nlpbamboo/source/checkout
+  # 从google code的subversion导出最新的bamboo trunk源码:
+    * svn checkout http://nlpbamboo.googlecode.com/svn/trunk/ nlpbamboo-read-only
     * 参照方法一进行安装 （同时提供configure&make&make install支持，但目前Makefile还有问题)
 
 ==Bamboo配置==
