--- a/wiki/GettingStarted.wiki
+++ b/wiki/GettingStarted.wiki
@@ -53,8 +53,8 @@ make install
 ===方法二：安装测试svn trunk的最新源码===
 
   # 从google code的subversion导出最新的bamboo trunk源码:
-    * svn checkout http://nlpbamboo.googlecode.com/svn/trunk/ nlpbamboo-read-only
-    * ./configure; make; make install
+    * svn checkout http://nlpbamboo.googlecode.com/svn/trunk/ nlpbamboo
+    * mkdir build; cd build; ../configure; make; make install
     * 不再强制安装在/opt/bamboo，make后可以直接使用
 
 ==Bamboo配置==
